app/assets/stylesheets/components/_selector.scss
.flex-form {
  .hb-selector-component:first-of-type {
    margin-top: 0;
  }

}
.hb-selector-component {
  
  margin-top: 12px;
  padding-top: 12px;
  border-top: 1px solid #ccc;

  &.open {
    .hb-flyout {
      display:block;
    }
  }

  .hb-selected {
    font-size: 12px;
    &.empty {
      color: #999;
    }
    &.empty > a:hover {
      cursor: pointer;
      text-decoration: none;
    }
  }

  h5 {
    margin-top: 0;
    &:hover {
      cursor: pointer;
      color: $hb-purple-dark;
    }
  }
  .hb-flyout {
    position: absolute;
    top: 36px;
    right: 0;

    z-index: 1000;
    display: none;
    float: left;
    min-width: 230px;
    border: 1px solid rgba(222, 222, 222, 0.8);
    background: #fff;
    box-shadow: 0px 1px 2px rgba(179, 179, 179, 0.5);

    padding: 6px;

    .hb-header {
      margin: -6px;
      margin-bottom: 0;
      padding: 6px;
      padding-bottom: 12px;
      background: #f3f3f3;
      border-bottom: 1px solid #e5e5e5;
    }

    .hb-text-filter {
      margin: 0 -6px;
      padding: 6px;
      background: #fafafa;
      border-bottom: 1px solid #e5e5e5;
      input {
        margin-bottom: 0;
      }
    }

  }

  ul {
    margin: -6px;
    margin-top: 0px;
    list-style: none;
    li {
      padding: 6px;
    }
  }

  .hb-menu-items {
    margin: -6px;
    margin-top: 0px;
    max-height: 400px;
    overflow-y: auto;
    .hb-menu-item {
      padding: 6px 12px;

      &:hover {
        cursor: pointer;
        background: $hb-purple;
        color: #fff;
        .ui-icon-checkmark {
          opacity: 1;
          color: #fff;
        }
      }

    }
  }

  .hb-display-items {
    .hb-display-item {
      padding: 3px 12px;
      margin: 3px 0px;
      border-radius: 3px;
    }
  }

  img {
    border-radius: 3px;
  }

  .hb-label-items {
    margin: -6px;
    margin-top: 0px;
    max-height: 400px;
    overflow-y: auto;
    .hb-menu-item {
      padding: 6px 12px;

      .color {
        display: inline-block;
        height: 12px;
        width: 12px;
        position: relative;
        top: 1px;
        margin: 0px 3px;
        border-radius: 3px;
      }

      &:hover {
        cursor: pointer;
        .ui-icon-checkmark {
          opacity: 1;
        }
      }

    }
  }

  .ui-icon-checkmark {
    opacity: 0;
  }
  .checked, .active {
    .ui-icon-checkmark {
      opacity: 1;
    }
  }

}

